added an image for the home page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
                 <h3>Services</h3>
                 <h3>Contact</h3>
             </nav>
-
         </header>
+        <main>
+            <a href="img/home-pic.jpg"></a>
+            <h3>Our Mission</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </main>
 
     </body>
 </html>
