Added the proper image

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             </nav>
         </header>
         <main>
-            <a href="img/home-pic.jpg"></a>
+            <img src="img/home-pic.png" alt="Flowers on a table" width="750" height="600" />
             <h3>Our Mission</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing bibendum est ultricies integer quis auctor elit. Parturient montes nascetur ridiculus mus mauris. In hac habitasse platea dictumst. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur. Sed odio morbi quis commodo odio. Aliquam vestibulum morbi blandit cursus risus at ultrices mi. Diam sit amet nisl suscipit adipiscing bibendum est. Lorem ipsum dolor sit amet. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus.</p>
         </main>
 
     </body>
