--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
     <head>
         <title>Personal Page</title>
+        <link rel="stylesheet" href="style/style.css" />
     </head>
     <body>
         <header>
