Adding form code to the contact page

--- a/services.html
+++ b/services.html
@@ -12,10 +12,14 @@
                 </article>
             </section>
             <section>
-                <h3>Showers</h3>
+                <article>
+                    <h3>Showers</h3>
+                </article>
             </section>
             <section>
+                <article>
                 <h3>Wedding</h3>
+                </article>
             </section>
         </main>
     </body>
