added required to the textarea code

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
                     Email Address: <input name="emailAddress" type="text" placeholder="Enter your e-mail address" required="required" />
                 </fieldset>
                 <label for="service">Message:</label>
-                    <textarea name="message" rows="7" cols="80">
+                    <textarea name="message" rows="7" cols="80" required="required">
                         Let us know how we can help.....
                     </textarea>
                     <input type="submit" value="Submit"/>
