Edited the form

--- a/contact.html
+++ b/contact.html
@@ -4,21 +4,21 @@
         <title>Contact Us</title>
     </head>
     <body>
-        <header>Contact</header>
+        <header>Contact Us:</header>
         <main>
             <form>
                 <fieldset>
-                    <legend>Contact Us</legend>
                     First Name: <input name="firstName" type="text" placeholder="Enter your first name" required="required" />
-                    Last Name: <input name="lastName" type="text" placeholder="Enter your last name" />
+                    Last Name: <input name="lastName" type="text" placeholder="Enter your last name" /> <br>
                     Email Address: <input name="emailAddress" type="text" placeholder="Enter your e-mail address" required="required" />
-                </fieldset>
-                <label for="service">Message:</label>
-                    <textarea name="message" rows="7" cols="80" required="required">
+                    <br >
+                
+                <label for="service">Message:</label> <br>
+                    <textarea name="message" rows="7" cols="80" required="required"> 
                         Let us know how we can help.....
-                    </textarea>
+                    </textarea> <br>
                     <input type="submit" value="Submit"/>
-
+                </fieldset>    
             </form>
 
         </main>
