--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
         <header>
             <h1>Event Planner</h1>
             <nav>
-                <h3>Home</h3>
-                <h3>About</h3>
-                <h3>Services</h3>
-                <h3>Contact</h3>
+                
+                <ul class="nav">
+                    <li><h3>Home</h3></li>
+                    <li><h3>About</h3></li>
+                    <li><h3>Services</h3></li>
+                    <li><h3>Contact</h3></li>
+                </ul>
+                
             </nav>
         </header>
         <main>
