--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
             <nav>
                 
                 <ul class="nav">
-                    <li><h3>Home</h3></li>
-                    <li><h3>About</h3></li>
-                    <li><h3>Services</h3></li>
-                    <li><h3>Contact</h3></li>
+                    <li><h3><a href="#home">Home</a></h3></li>
+                    <li><h3><a href="#about">About Us</a></h3></li>
+                    <li><h3><a href="services">Services</a></h3></li>
+                    <li><h3><a href="contact">Contact Us</a></h3></li>
                 </ul>
                 
             </nav>
