added paragraphs to the service page

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                     <textarea name="message" rows="7" cols="80" required="required"> 
                         Let us know how we can help.....
                     </textarea> <br>
-                    <input type="submit" value="Submit"/>
+                    <button type="button" class="btn btn-lg btn-primary">Submit</button>
                 </fieldset>    
             </form>
 
