--- a/contact.html
+++ b/contact.html
@@ -14,12 +14,20 @@
         <header>Contact Us:</header>
             <form>
                 <div class="form-group">
-                    <label for="usr">Name:</label>
-                    <input type="text" class="form-control" id="usr">
+                    <label for="usr">Name</label>
+                    <input type="text" class="form-control" id="usr" placeholder="Enter your name..." required>
                   </div>
                   <div class="form-group">
-                    <label for="pwd">Password:</label>
-                    <input type="password" class="form-control" id="pwd">
+                    <label for="pwd">Password</label>
+                    <input type="password" class="form-control" id="pwd" placeholder="Enter your password...">
+                  </div>
+                  <div class="form-group">
+                      <label for="email">E-mail Address</label>
+                      <input type="email" class="form-control" id="email" placeholder="Enter your e-mail..." required>
+                  </div>
+                  <div class="form-group">
+                    <label for="comments">Text</label>
+                    <textarea class="form-control" rows="10" id="comments" placeholder="Additional Info..." required></textarea>
                   </div>
 
                 
