made changes on the images and the form

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </ol>
           
             <!-- Wrapper for slides -->
+            <div class="container">
             <div class="carousel-inner">
               <div class="item active">
                 <img src="img/glitterback.jpg" alt="Lights">
@@ -60,6 +61,7 @@
                   <h3>Welcome Baby Boy!</h3>
                 </div>
               </div>
+            </div>
             </div>
           
             <!-- Left and right controls -->
