--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,9 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <header>Contact Us:</header>
+        <div class="container">
+        <h3>Contact Us</h3>
+
             <form>
                 <div class="form-group">
                     <label for="usr">Name</label>
@@ -32,6 +34,6 @@
 
                 
             </form>
-
+        </div>    
     </body>
 </html>
