--- a/birthday.html
+++ b/birthday.html
@@ -14,7 +14,7 @@
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <h3>Birthday</h3> 
             <div class="container">
-            <img src="img/Birthday.jpg" alt="Birthday cake" /> 
+            <img src="img/Birthday.jpg" alt="Birthday cake" width="700" height="600"/> 
             </div>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mauris in aliquam sem fringilla ut morbi tincidunt augue interdum. Elit sed vulputate mi sit amet. Leo in vitae turpis massa. Arcu dictum varius duis at consectetur lorem donec massa. Facilisis leo vel fringilla est ullamcorper. Fames ac turpis egestas integer eget aliquet. Quisque id diam vel quam elementum pulvinar etiam non. Sagittis orci a scelerisque purus semper eget duis. Porttitor massa id neque aliquam vestibulum morbi blandit cursus. Viverra aliquet eget sit amet tellus cras. At imperdiet dui accumsan sit amet nulla facilisi. Neque laoreet suspendisse interdum consectetur. Urna porttitor rhoncus dolor purus non enim praesent elementum. Pretium lectus quam id leo in vitae turpis. Enim sit amet venenatis urna cursus eget nunc scelerisque. Tincidunt tortor aliquam nulla facilisi cras fermentum odio eu.
