--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                     <li class="active"><a href="#">Home</a></li>
                     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Services<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Birthday</a></li>
-                            <li><a href="#">Showers</a></li>
-                            <li><a href="#">Wedding</a></li>
+                            <li><a href="birthday.html">Birthday</a></li>
+                            <li><a href="showers.html">Showers</a></li>
+                            <li><a href="wedding.html">Wedding</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>                   
         </nav>
