added to the service page

--- a/services.html
+++ b/services.html
@@ -12,7 +12,11 @@
     </head>
     <body>
         <h3>Our Services</h3>
-        
+        <ul>
+            <li><a href="birthday.html">Birthday</a></li>
+            <li><a href="showers.html">Showers</a></li>
+            <li><a href="wedding.html">Wedding</a></li>
+        </ul>
         
     </body>
 </html>
