adjusting my images

--- a/wedding.html
+++ b/wedding.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="container">
-            <img src="img/Wedding.jpg" alt="wedding venue">
+            <img src="img/Wedding.jpg" alt="wedding venue" width="1000" height="850">
         </div>
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <h3>Wedding</h3>
