making few changed on the wedding page

--- a/wedding.html
+++ b/wedding.html
@@ -12,13 +12,23 @@
     </head>
     <body>
         <div class="container">
-            <img src="img/Wedding.jpg" alt="wedding venue" width="1000" height="850">
+            <img src="img/Wedding.jpg" alt="wedding venue" width="400" height="250">
         </div>
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-            <h3>Wedding</h3>
+            <h3>Our Services</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mauris in aliquam sem fringilla ut morbi tincidunt augue interdum. Elit sed vulputate mi sit amet. Leo in vitae turpis massa. Arcu dictum varius duis at consectetur lorem donec massa. Facilisis leo vel fringilla est ullamcorper. Fames ac turpis egestas integer eget aliquet. Quisque id diam vel quam elementum pulvinar etiam non. Sagittis orci a scelerisque purus semper eget duis. Porttitor massa id neque aliquam vestibulum morbi blandit cursus. Viverra aliquet eget sit amet tellus cras. At imperdiet dui accumsan sit amet nulla facilisi. Neque laoreet suspendisse interdum consectetur. Urna porttitor rhoncus dolor purus non enim praesent elementum. Pretium lectus quam id leo in vitae turpis. Enim sit amet venenatis urna cursus eget nunc scelerisque. Tincidunt tortor aliquam nulla facilisi cras fermentum odio eu.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Duis ultricies lacus sed turpis tincidunt id. Lorem sed risus ultricies tristique nulla. Porttitor eget dolor morbi non arcu risus. In mollis nunc sed id semper risus in hendrerit. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend.
             </p>
+
+            <h3>Complete Planning</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Duis ultricies lacus sed turpis tincidunt id. Lorem sed risus ultricies tristique nulla. Porttitor eget dolor morbi non arcu risus. In mollis nunc sed id semper risus in hendrerit. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend.<br> <strong>starting at $4,000</strong></p>
+
+            <h3>Partial Planning</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Duis ultricies lacus sed turpis tincidunt id. Lorem sed risus ultricies tristique nulla. Porttitor eget dolor morbi non arcu risus. In mollis nunc sed id semper risus in hendrerit. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend.<br><strong>starting at $2,000</strong></p>
+
+            <h3>Day-Of</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Duis ultricies lacus sed turpis tincidunt id. Lorem sed risus ultricies tristique nulla. Porttitor eget dolor morbi non arcu risus. In mollis nunc sed id semper risus in hendrerit. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend.<br><strong>starting at $1,500</strong></p>
+
         </div>
 
     </body>
