--- a/wedding.html
+++ b/wedding.html
@@ -13,22 +13,25 @@
     <body>
         <div class="container">
             <img src="img/Wedding.jpg" alt="wedding venue" width="400" height="250">
-        </div>
+        
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <h3>Our Services</h3>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Duis ultricies lacus sed turpis tincidunt id. Lorem sed risus ultricies tristique nulla. Porttitor eget dolor morbi non arcu risus. In mollis nunc sed id semper risus in hendrerit. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend.
             </p>
-
+           
+            <img src="img/complan.jpg" alt="candles decor" width="400" height="250" >
             <h3>Complete Planning</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Duis ultricies lacus sed turpis tincidunt id. Lorem sed risus ultricies tristique nulla. Porttitor eget dolor morbi non arcu risus. In mollis nunc sed id semper risus in hendrerit. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend.<br> <strong>starting at $4,000</strong></p>
 
+            <img src="img/partplan.jpg" alt="boquet of flowers" width="400" height="350" >
             <h3>Partial Planning</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Duis ultricies lacus sed turpis tincidunt id. Lorem sed risus ultricies tristique nulla. Porttitor eget dolor morbi non arcu risus. In mollis nunc sed id semper risus in hendrerit. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend.<br><strong>starting at $2,000</strong></p>
 
+            <img src="img/dayof.jpg" alt="bride" width="400" height="500" >
             <h3>Day-Of</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Duis ultricies lacus sed turpis tincidunt id. Lorem sed risus ultricies tristique nulla. Porttitor eget dolor morbi non arcu risus. In mollis nunc sed id semper risus in hendrerit. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend.<br><strong>starting at $1,500</strong></p>
-
+        </div>    
         </div>
 
     </body>
