making changes on the html

--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
+          <div class="greet">
+          <h1>Hello & Welcome</h1></div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Commodo nulla facilisi nullam vehicula ipsum a. Integer vitae justo eget magna fermentum iaculis eu non diam. Dolor magna eget est lorem ipsum dolor. Commodo ullamcorper a lacus vestibulum. Praesent semper feugiat nibh sed. Nisl nunc mi ipsum faucibus vitae aliquet. Eu scelerisque felis imperdiet proin fermentum leo vel orci. Tortor consequat id porta nibh venenatis cras. Viverra justo nec ultrices dui sapien eget mi proin. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus. Vel facilisis volutpat est velit egestas dui id ornare. Nisi scelerisque eu ultrices vitae auctor eu augue ut lectus. Vulputate dignissim suspendisse in est ante.</p>
+          <footer>
+            <div class="copyright text-center">
+              <p>&copy;2020 All Rights Reserved</p>
+
+            </div>
+          </footer>
         
 
     </body>
