--- a/about.html
+++ b/about.html
@@ -11,6 +11,25 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Event Planner</a>
+                </div>
+                <ul class="nav navrbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Services<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="birthday.html">Birthday</a></li>
+                            <li><a href="showers.html">Showers</a></li>
+                            <li><a href="wedding.html">Wedding</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>                   
+        </nav>
         <header>Our Mission</header>
         <main>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis blandit turpis cursus in hac habitasse. Faucibus turpis in eu mi bibendum neque egestas congue. Quis hendrerit dolor magna eget. Quis blandit turpis cursus in hac. Nunc lobortis mattis aliquam faucibus purus in. Condimentum lacinia quis vel eros. Malesuada fames ac turpis egestas. Curabitur vitae nunc sed velit dignissim. Nunc scelerisque viverra mauris in aliquam sem. Porttitor massa id neque aliquam vestibulum morbi blandit.
