--- a/birthday.html
+++ b/birthday.html
@@ -11,6 +11,25 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Event Planner</a>
+                </div>
+                <ul class="nav navrbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Services<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="birthday.html">Birthday</a></li>
+                            <li><a href="showers.html">Showers</a></li>
+                            <li><a href="wedding.html">Wedding</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>                   
+        </nav>
             <h3>Birthday</h3> 
             <div class="container">
             <img src="img/Birthday.jpg" alt="Birthday cake" width="950" height="750"/> 
