--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,25 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Event Planner</a>
+                </div>
+                <ul class="nav navrbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Services<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="birthday.html">Birthday</a></li>
+                            <li><a href="showers.html">Showers</a></li>
+                            <li><a href="wedding.html">Wedding</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>                   
+        </nav>
         <div class="container">
             <form action="action_page.php">
                 <div class="form-group">
