--- a/birthday.html
+++ b/birthday.html
@@ -17,7 +17,7 @@
                     <a class="navbar-brand" href="#">Event Planner</a>
                 </div>
                 <ul class="nav navrbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
+                    <li class="active"><a href="index.html">Home</a></li>
                     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Services<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="birthday.html">Birthday</a></li>
@@ -39,4 +39,11 @@
             </p>            
     </div>
     </body>
+    <footer>
+        <div><br>
+          <p>&copy;2020 All Rights Reserved</p>
+
+        </div>
+      </footer>
+    
 </html>
