--- a/wedding.html
+++ b/wedding.html
@@ -17,7 +17,7 @@
                     <a class="navbar-brand" href="#">Event Planner</a>
                 </div>
                 <ul class="nav navrbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
+                    <li class="active"><a href="index.html">Home</a></li>
                     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Services<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="birthday.html">Birthday</a></li>
@@ -76,7 +76,14 @@
             <img src="img/dayof.jpg" alt="bride" width="400" height="500" ></div>
             </div>
         </div> 
-        </section>   
+        </section>  
+        <footer>
+            <div><br>
+              <p>&copy;2020 All Rights Reserved</p>
+
+            </div>
+          </footer>
+         
         
 
     </body>
