adding to the showers page

--- a/contact.html
+++ b/contact.html
@@ -37,28 +37,28 @@
                 <div class="row main-agile-sectns">
                 <div class="col-md-6 agileits-btm-spc form-text1">
                 <label>Name</label>
-                <input type="text" name="Name" placeholder="Enter Your Name" required="">
+                <input type="text" name="Name" placeholder="Enter Your Name" required>
                 </div>
                 <div class="col-md-6 agileits-btm-spc form-text2">
                 <label>Phone Number</label>
-                <input type="text" name="Phone no" placeholder="Enter Phone Number" required="">
+                <input type="text" name="Phone no" placeholder="Enter Phone Number">
                 </div>
                 </div>
                 <div class="row main-agile-sectns">
                 <div class="col-md-6 agileits-btm-spc form-text1">
                 <label>Subject</label>
-                <input type="text" name="subject" placeholder="Enter Subject" required="">
+                <input type="text" name="subject" placeholder="Enter Subject">
                 </div>
                 
                 <div class="col-md-6 agileits-btm-spc form-text1">
                 <label>Email</label>
-                <input type="email" name="email" placeholder="Enter Your Email" required="">
+                <input type="email" name="email" placeholder="Enter Your Email" required>
                 </div>
                 </div>
                 <div class="main-agile-sectns ">
                 <div class="agileits-btm-spc form-text2 p-0">
                 <label>Inqury</label>
-                <textarea placeholder="Enter Your Message Here"></textarea>
+                <textarea placeholder="Enter Your Message Here" required></textarea>
                 </div>
                 </div>
                 <button type="submit" class="btn">Submit</button>
