added more images to the shower page

--- a/showers.html
+++ b/showers.html
@@ -34,33 +34,47 @@
         <div class="container"> 
             <div class="row">
                 <div class="column"><br> 
-            <div class="container">
-                <img src="img/Showers.jpg" alt="cupcakes on a platter" width="950" height="750" class="center"/></div>
-            </div>
+                <img src="img/Showers.jpg" alt="cupcakes on a platter" width="400" height="250"/></div>
+            
+            <div class="column">
+            <h3>Our Services</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl condimentum id venenatis a condimentum vitae. Blandit cursus risus at ultrices mi. Enim sed faucibus turpis in eu. Diam quis enim lobortis scelerisque fermentum dui faucibus in. Sed adipiscing diam donec adipiscing. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam. Vel pretium lectus quam id leo in. Est sit amet facilisis magna. Turpis egestas pretium aenean pharetra magna ac placerat vestibulum.</p></div>
         </div>
-        </div>        
-        </section>  
-        <section>     
-            <div class="row">
-                <div class="col-lg-6">
-            <h3>Baby Showers</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mauris in aliquam sem fringilla ut morbi tincidunt augue interdum. Elit sed vulputate mi sit amet. Leo in vitae turpis massa. Arcu dictum varius duis at consectetur lorem donec massa. Facilisis leo vel fringilla est ullamcorper. Fames ac turpis egestas integer eget aliquet. Quisque id diam vel quam elementum pulvinar etiam non. Sagittis orci a scelerisque purus semper eget duis. Porttitor massa id neque aliquam vestibulum morbi blandit cursus. Viverra aliquet eget sit amet tellus cras. At imperdiet dui accumsan sit amet nulla facilisi. Neque laoreet suspendisse interdum consectetur. Urna porttitor rhoncus dolor purus non enim praesent elementum. Pretium lectus quam id leo in vitae turpis. Enim sit amet venenatis urna cursus eget nunc scelerisque. Tincidunt tortor aliquam nulla facilisi cras fermentum odio eu.
+        </div>      
+        </section><br>  
+        <section> 
+            <div class="container">   
+                <div class="row">
+                   <div class="column">
+                    <h3>Baby Showers</h3>
+                    <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl condimentum id venenatis a condimentum vitae. Blandit cursus risus at ultrices mi. Enim sed faucibus turpis in eu. Diam quis enim lobortis scelerisque fermentum dui faucibus in. Sed adipiscing diam donec adipiscing. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam. Vel pretium lectus quam id leo in. Est sit amet facilisis magna. Turpis egestas pretium aenean pharetra magna ac placerat vestibulum.
                 <br><strong>starting at $400</strong>
                 
-            </p></div>
-            </div>
+                </p></div>
+                <div class="column">
+                    <img src="img/babypic.jpg" alt="cupcakes on the table" width="400" height="250">
+                </div>
+              </div>
+           </div>
         </div> 
-            <div class="row">
-                <div class="col-lg-6">
-            <h3>Bridal Showers</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mauris in aliquam sem fringilla ut morbi tincidunt augue interdum. Elit sed vulputate mi sit amet. Leo in vitae turpis massa. Arcu dictum varius duis at consectetur lorem donec massa. Facilisis leo vel fringilla est ullamcorper. Fames ac turpis egestas integer eget aliquet. Quisque id diam vel quam elementum pulvinar etiam non. Sagittis orci a scelerisque purus semper eget duis. Porttitor massa id neque aliquam vestibulum morbi blandit cursus. Viverra aliquet eget sit amet tellus cras. At imperdiet dui accumsan sit amet nulla facilisi. Neque laoreet suspendisse interdum consectetur. Urna porttitor rhoncus dolor purus non enim praesent elementum. Pretium lectus quam id leo in vitae turpis. Enim sit amet venenatis urna cursus eget nunc scelerisque. Tincidunt tortor aliquam nulla facilisi cras fermentum odio eu.
-                <br><strong>starting at $600</strong>
+        </section><br>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/bridalpic.jpg" alt="a bridal shower cake" width="400" height="250">
 
-            </p></div>
+                    </div>
+                    <div class="column">
+                        <h3>Bridal Showers</h3>
+                        <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl condimentum id venenatis a condimentum vitae. Blandit cursus risus at ultrices mi. Enim sed faucibus turpis in eu. Diam quis enim lobortis scelerisque fermentum dui faucibus in. Sed adipiscing diam donec adipiscing. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam. Vel pretium lectus quam id leo in. Est sit amet facilisis magna. Turpis egestas pretium aenean pharetra magna ac placerat vestibulum.
+                        <br><strong>starting at $600</strong>
+
+                        </p></div>
+                </div>
             </div>
-        </div> 
         </section>  
             <footer>
                 <div><br>
