added more images to the birthday page

--- a/showers.html
+++ b/showers.html
@@ -37,7 +37,7 @@
                 <img src="img/Showers.jpg" alt="cupcakes on a platter" width="400" height="250"/></div>
             
             <div class="column">
-            <h3>Our Services</h3>
+            <h3>Shower Services</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl condimentum id venenatis a condimentum vitae. Blandit cursus risus at ultrices mi. Enim sed faucibus turpis in eu. Diam quis enim lobortis scelerisque fermentum dui faucibus in. Sed adipiscing diam donec adipiscing. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam. Vel pretium lectus quam id leo in. Est sit amet facilisis magna. Turpis egestas pretium aenean pharetra magna ac placerat vestibulum.</p></div>
         </div>
         </div>      
