--- a/wedding.html
+++ b/wedding.html
@@ -36,7 +36,7 @@
                     <div class="column"><br>      
             <img src="img/Wedding.jpg" alt="wedding venue" width="400" height="250"></div>
             <div class="column">
-            <h3>Our Services</h3>
+            <h3>Wedding Services</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Duis ultricies lacus sed turpis tincidunt id. Lorem sed risus ultricies tristique nulla. Porttitor eget dolor morbi non arcu risus. In mollis nunc sed id semper risus in hendrerit. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend.
                 </p> </div> 
