--- a/birthday.html
+++ b/birthday.html
@@ -30,18 +30,46 @@
                 </ul>
             </div>                   
         </nav>
+        <section>
             <div class="container">
-            <img src="img/Birthday.jpg" alt="Birthday cake" width="850" height="650"/> 
-            </div>
-            <h3>Full Day</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mauris in aliquam sem fringilla ut morbi tincidunt augue interdum. Elit sed vulputate mi sit amet. Leo in vitae turpis massa. Arcu dictum varius duis at consectetur lorem donec massa. Facilisis leo vel fringilla est ullamcorper. Fames ac turpis egestas integer eget aliquet. Quisque id diam vel quam elementum pulvinar etiam non. Sagittis orci a scelerisque purus semper eget duis. Porttitor massa id neque aliquam vestibulum morbi blandit cursus. Viverra aliquet eget sit amet tellus cras. At imperdiet dui accumsan sit amet nulla facilisi. Neque laoreet suspendisse interdum consectetur. Urna porttitor rhoncus dolor purus non enim praesent elementum. Pretium lectus quam id leo in vitae turpis. Enim sit amet venenatis urna cursus eget nunc scelerisque. Tincidunt tortor aliquam nulla facilisi cras fermentum odio eu.
-            </p><br><strong>starting at $500</strong>   
-            <h3>Half Day</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mauris in aliquam sem fringilla ut morbi tincidunt augue interdum. Elit sed vulputate mi sit amet. Leo in vitae turpis massa. Arcu dictum varius duis at consectetur lorem donec massa. Facilisis leo vel fringilla est ullamcorper. Fames ac turpis egestas integer eget aliquet. Quisque id diam vel quam elementum pulvinar etiam non. Sagittis orci a scelerisque purus semper eget duis. Porttitor massa id neque aliquam vestibulum morbi blandit cursus. Viverra aliquet eget sit amet tellus cras. At imperdiet dui accumsan sit amet nulla facilisi. Neque laoreet suspendisse interdum consectetur. Urna porttitor rhoncus dolor purus non enim praesent elementum. Pretium lectus quam id leo in vitae turpis. Enim sit amet venenatis urna cursus eget nunc scelerisque. Tincidunt tortor aliquam nulla facilisi cras fermentum odio eu.
-            </p><br><strong>starting at $300</strong>        
-    </div>
+                <div class="row">
+                    <div class="column">
+                    <img src="img/Birthday.jpg" alt="Birthday cake" width="450" height="300"/></div>
+                    <div class="column"> 
+                        <h3>Birthday Services</h3>  
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Metus dictum at tempor commodo ullamcorper a. Vivamus at augue eget arcu. Libero volutpat sed cras ornare arcu. Feugiat in ante metus dictum at. Lacus vel facilisis volutpat est velit. Nunc non blandit massa enim. Dignissim diam quis enim lobortis scelerisque fermentum dui. Venenatis lectus magna fringilla urna porttitor rhoncus dolor. Sit amet mauris commodo quis imperdiet massa tincidunt nunc. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit.</p></div>
+                </div>
+            </div>    
+        </section><br>
+        <section> 
+            <div class="container">
+                <div class="row">
+                    <div class="column">
+                        <h3>Full Day</h3>
+                        <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Metus dictum at tempor commodo ullamcorper a. Vivamus at augue eget arcu. Libero volutpat sed cras ornare arcu. Feugiat in ante metus dictum at. Lacus vel facilisis volutpat est velit. Nunc non blandit massa enim. Dignissim diam quis enim lobortis scelerisque fermentum dui. Venenatis lectus magna fringilla urna porttitor rhoncus dolor. Sit amet mauris commodo quis imperdiet massa tincidunt nunc. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit.
+                        </p><br><strong>starting at $500</strong></div>
+                    <div class="column">
+                        <img src="img/fullday.jpg" alt="goodies table decor" width="450" height="300">
+                    </div>
+                </div>
+            </div> 
+        </section><br>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/halfday.jpg" alt=" birthday balloons" width="450" height="300">
+                    </div>
+                    <div class="column">  
+                        <h3>Half Day</h3>
+                        <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Metus dictum at tempor commodo ullamcorper a. Vivamus at augue eget arcu. Libero volutpat sed cras ornare arcu. Feugiat in ante metus dictum at. Lacus vel facilisis volutpat est velit. Nunc non blandit massa enim. Dignissim diam quis enim lobortis scelerisque fermentum dui. Venenatis lectus magna fringilla urna porttitor rhoncus dolor. Sit amet mauris commodo quis imperdiet massa tincidunt nunc. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit.
+                        </p><br><strong>starting at $300</strong>
+                    </div>     
+                </div>
+            </div>       
+        </section>    
     </body>
     <footer>
         <div><br>
