added more images to the about page

--- a/contact.html
+++ b/contact.html
@@ -65,8 +65,9 @@
                 </form>
                 </div>
                 </section>
+                <p>Thank you for choosing us!</p>
 
-        </div>
+        
         <footer>
             <div><br>
               <p>&copy;2020 All Rights Reserved</p>
